--- a/portfolio.html
+++ b/portfolio.html
@@ -361,9 +361,9 @@
 <section id="certifications">
   <h2>Certifications</h2>
   <ul>
-    <li>Oracle Certified Professional – Java SE 8 Programmer</li>
-    <li>ISTQB Foundation Level</li>
-    <li>Certified Scrum Master – Scrum Alliance</li>
+    <li><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=BD14AD3D97E3F56378423AEF4F203B633702C02277AD91BDA4C51DE29DAF6380">Oracle Certified Professional – Java SE 8 Programmer</a></li>
+    <li><a href="ISTQB.png">ISTQB Foundation Level</a></li>
+    <li><a href="https://bcert.me/sqvinmilf">Certified Scrum Master – Scrum Alliance</a></li>
   </ul>
 </section>
 
