--- a/portfolio.html
+++ b/portfolio.html
@@ -258,7 +258,7 @@
     }
 
     nav a {
-      font-size: 0.9rem;
+      font-size: 1rem;
     }
   }
 </style>
@@ -300,14 +300,15 @@
 
 <section id="experience">
   <h2>Work Experience</h2>
-  <div class="job">
-    <h3>Senior Test Analyst | Test Yantra Software Solutions (2024 - Present)</h3>
-    <p>Led UI test automation efforts with Selenium and Java, designed POM classes, automated API scripts using Rest Assured, created Regression/Smoke suites, and contributed to Agile ceremonies.</p>
-  </div>
-  <div class="job">
-    <h3>Senior Automation Engineer | Indium (2021 - 2024)</h3>
+ <div class="job">
+    <h3>Senior Automation Engineer | Indium (2024 - Present)</h3>
     <p>Executed UI test automation using C# Playwright, developed regression suites with hybrid frameworks, collaborated in Scrum ceremonies, and ensured production validation with hotfix deployments.</p>
   </div>
+  <div class="job">
+    <h3>Senior Test Analyst | Test Yantra Software Solutions (2021 - 2024)</h3>
+    <p>Led UI test automation efforts with Selenium and Java, designed POM classes, automated API scripts using Rest Assured, created Regression/Smoke suites, and contributed to Agile ceremonies.</p>
+  </div>
+  
   <div class="job">
     <h3>Corporate Java Trainer | Freelance (2018 - 2021)</h3>
     <p>Conducted Java and Selenium training for 10,000+ students and professionals. Created hands-on exercises and projects, provided code troubleshooting and mentoring.</p>
